// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

module foo {}
~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
namespace foo {}
~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.

declare module foo {}
~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
declare namespace foo {}
~~~~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
"
`;

exports[` 2`] = `
"Correct

declare module 'foo' {}

// anything inside a d.ts file
"
`;

exports[` 3`] = `
"Incorrect
Options: { "allowDeclarations": true }

module foo {}
~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
namespace foo {}
~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
"
`;

exports[` 4`] = `
"Correct
Options: { "allowDeclarations": true }

declare module 'foo' {}
declare module foo {}
declare namespace foo {}

declare global {
  namespace foo {}
}

declare module foo {
  namespace foo {}
}
"
`;

exports[` 5`] = `
"Incorrect
Options: { "allowDeclarations": false }

module foo {}
~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
namespace foo {}
~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
declare module foo {}
~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
declare namespace foo {}
~~~~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
"
`;

exports[` 6`] = `
"Correct
Options: { "allowDeclarations": false }

declare module 'foo' {}
"
`;

exports[` 7`] = `
"Incorrect
Options: { "allowDefinitionFiles": true }

// if outside a d.ts file
module foo {}
~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
namespace foo {}
~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.

// if outside a d.ts file and allowDeclarations = false
module foo {}
~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
namespace foo {}
~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
declare module foo {}
~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
declare namespace foo {}
~~~~~~~~~~~~~~~~~~~~~~~~ ES2015 module syntax is preferred over namespaces.
"
`;

exports[` 8`] = `
"Correct
Options: { "allowDefinitionFiles": true }

declare module 'foo' {}

// anything inside a d.ts file
"
`;
